--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 # Global settings applied to the whole site.
 [build]
-  base    = "site"
+  base    = "hugo_0.19"
   publish = "public"
   command = "make"
 
