--- a/netlify.toml
+++ b/netlify.toml
@@ -2,11 +2,4 @@
 [build]
   base    = "hugo_0.19"
   publish = "public"
-  command = "make"
-
-# Production context: All deploys to the main
-# repository branch will inherit these settings.
-[context.production]
-  command = "make production"
-  [context.production.environment]
-    ACCESS_TOKEN = "super secret"
+  command = "hugo"
