--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,6 @@
-baseURL = "https://www.cleverlaziness.com/"
+baseURL = "http://www.cleverlaziness.com/"
 languageCode = "en-us"
 title = "Clever Laziness"
-theme = ""
 copyright = "2017 Clever Laziness"
 
 googleAnalytics = ""
@@ -36,13 +35,8 @@ SectionPagesMenu = "main"
   description = "A blog about automation and productivity"
 
 [params]
-  github = ""
   twitter = "cleverlaziness"
 
 [outputs]
-  home = ["html", "jsonfeed", "rss"]
+  home = ["html", "rss"]
 
-[outputFormats.jsonfeed]
-  mediaType = "application/json"
-  baseName = "feed"
-  isPlainText = true
