--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@ languageCode = "en-us"
 title = "Clever Laziness"
 copyright = "2017 Clever Laziness"
 
-googleAnalytics = ""
+googleAnalytics = "UA-102517378-1"
 
 enableRobotsTXT = "true"
 
