Webclip and head adjustments
Created and linked webclip images for  iOS Safari.

Cleaned up head contents.

--- a/config.toml
+++ b/config.toml
@@ -4,11 +4,12 @@ title = "Clever Laziness"
 copyright = "2017 Clever Laziness"
 
 # googleAnalytics = "UA-102517378-1"
+# {{ template "_internal/google_analytics_async.html" . }}
 
 enableRobotsTXT = "true"
 
 [author]
-  name = "Juan"
+  name = "[Juan](https://www.twitter.com/theverylastjuan)"
 
 SectionPagesMenu = "main"
 
