--- a/config.toml
+++ b/config.toml
@@ -12,7 +12,7 @@ enableEmoji = "true"
 SectionPagesMenu = "main"
 
 [permalinks]
-  post = "/:title/"
+  archive = "/:title/"
 
 [[menu.main]]
   name = "Archive"
