Minor accessibility and styling changes
Removed redundant title attributes.
Added alt information to site logo.
Removed nav-links underline.
Updated copyright.

--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseURL = "https://www.cleverlaziness.com/"
 languageCode = "en-us"
 title = "Clever Laziness"
-copyright = " 2017-2018 Clever Laziness"
+copyright = " 2018 Clever Laziness"
 
 enableRobotsTXT = "true"
 enableEmoji = "true"
