Removed baseURL from config
CSS not loding on live version

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://www.cleverlaziness.com/"
+baseURL = "/"
 languageCode = "en-us"
 title = "Clever Laziness"
 copyright = " 2018 Clever Laziness"
