Blackfriday chnages in config
Made links in MD files open in a new window.

--- a/config.toml
+++ b/config.toml
@@ -8,11 +8,14 @@ enableEmoji = "true"
 
 FootnoteReturnLinkContents = "↩"
 
+SectionPagesMenu = "main"
+
+[blackfriday]
+  plainIDAnchors = true
+  hrefTargetBlank = true
+
 [author]
   name = "[Juan](https://www.twitter.com/theverylastjuan)"
-  email = "hi@cleverlaziness.com"
-
-SectionPagesMenu = "main"
 
 [permalinks]
   archive = "/:title/"
