--- a/config.toml
+++ b/config.toml
@@ -6,40 +6,27 @@ enableEmoji = "true"
 enableRobotsTXT = "true"
 languageCode = "en-us"
 title = "Clever Laziness"
+
 [author]
-name = "[Juan](https://www.twitter.com/theverylastjuan)"
+  name = "Juan Villela"
+
 [blackfriday]
-hrefTargetBlank = true
-plainIDAnchors = true
-[[menu.main]]
-identifier = "archive"
-name = "Archive"
-url = "/archive/"
-weight = -120
-[[menu.main]]
-identifier = "tag"
-name = "Tags"
-url = "/tags/"
-weight = -110
-[[menu.main]]
-identifier = "about"
-name = "About"
-url = "/about/"
-weight = -110
-[[menu.main]]
-identifier = "license"
-name = "License"
-url = "/license/"
-weight = -110
+  hrefTargetBlank = true
+  plainIDAnchors = true
+
 [outputs]
-home = ["html", "rss"]
+  home = ["html", "rss"]
+
 [params]
-OpenLinksInNewWindow = true
-social = "fourjuaneight"
+  OpenLinksInNewWindow = true
+  social = "fourjuaneight"
+
 [params.google.analytics]
-trackerID = "UA-119777735-1"
+  trackerID = "UA-119777735-1"
+
 [params.meta]
-description = "A blog about coding and productivity"
-keywords = "coding, productivity, automation"
+  description = "A blog about coding and productivity"
+  keywords = "coding, productivity, automation"
+
 [permalinks]
-archive = "/:title/"
+  archive = "/:title/"
