Syntax highlighting and meta updates
Replaced Highlight.js with built-in Chroma syntax highlighting.
Included author on posts. Visible to readers but visually hidden.
Updated spacing and color for list template dates.

--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,14 @@ enableRobotsTXT = "true"
 languageCode = "en-us"
 title = "Clever Laziness"
 
+# Pygments Syntax Highlighting
+pygmentsUseClassic = false
+pygmentsUseClasses = true
+pygmentsCodeFences = true
+pygmentsCodefencesGuessSyntax = true
+pygmentsOptions = "linenos=inline, lineseparator=<br>"
+pygmentsStyle = "monokai"
+
 [author]
   name = "Juan Villela"
 
