Moved Bookmarks sections to a Section for consistency and in preparation for archiving Bookrmarks content.

--- a/config.toml
+++ b/config.toml
@@ -34,6 +34,7 @@ pygmentsStyle = "dracula"
 
 [permalinks]
   articles = "/articles/:title/"
+  bookmarks = "/bookmarks/:title/"
   bookshelf = "/bookshelf/:title/"
   genre = "/bookshelf/genre/:slug/"
   category = "/articles/category/:slug/"
