--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
   "devDependencies": {
     "autoprefixer": "^9.1.5",
     "cssnano": "^4.1.4",
+    "eslint": "^5.13.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^4.0.0",
+    "eslint-plugin-import": "^2.16.0",
     "gulp": "^4.0.0",
     "gulp-concat-util": "^0.5.5",
     "gulp-plumber": "^1.2.0",
