--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,21 +1,32 @@
 {
   "env": {
     "browser": true,
+    "jquery": true,
+    "jest": true,
     "node": true
   },
   "extends": ["airbnb", "prettier"],
   "plugins": ["prettier"],
+  "parser": "babel-eslint",
   "parserOptions": {
     "ecmaVersion": 8,
-    "sourceType": "module",
     "ecmaFeatures": {
-      "jsx": true
-    }
+      "experimentalObjectRestSpread": true,
+      "impliedStrict": true,
+      "classes": true
+    },
+    "sourceType": "module"
   },
   "rules": {
     "curly": 2,
     "dot-notation": 2,
+    "func-names": 0,
     "id-length": 2,
+    "import": 0,
+    "import/prefer-default-export": 0,
+    "no-alert": 0,
+    "no-await-in-loop": 0,
+    "no-debugger": 0,
     "no-const-assign": 2,
     "no-dupe-class-members": 2,
     "no-else-return": 2,
@@ -27,7 +38,20 @@
         "ignore": [-1, 0, 1]
       }
     ],
-    "no-shadow": 2,
+    "no-shadow": [
+      2,
+      {
+        "hoist": "all",
+        "allow": [
+          "resolve",
+          "reject",
+          "done",
+          "next",
+          "err",
+          "error"
+        ]
+      }
+    ],
     "no-unneeded-ternary": 2,
     "no-unused-expressions": 2,
     "no-unused-vars": [
@@ -42,7 +66,22 @@
     "prefer-arrow-callback": 2,
     "prefer-const": 2,
     "prefer-promise-reject-errors": 2,
-    "prettier/prettier": 2,
+    "quotes": [
+      2,
+      "single",
+      {
+        "avoidEscape": true,
+        "allowTemplateLiterals": true
+      }
+    ],
+    "prettier/prettier": [
+      "error",
+      {
+        "trailingComma": "es5",
+        "singleQuote": true,
+        "printWidth": 80
+      }
+    ],
     "sort-imports": 2,
     "sort-keys": [
       2,
@@ -53,6 +92,7 @@
       }
     ],
     "sort-vars": 2,
+    "space-before-function-paren": 0,
     "strict": [2, "global"]
   }
 }
