Added image convertion gulp task.

--- a/package.json
+++ b/package.json
@@ -38,10 +38,10 @@
     "eslint-plugin-import": "^2.16.0",
     "gulp": "^4.0.0",
     "gulp-concat-util": "^0.5.5",
+    "gulp-gm": "0.0.9",
     "gulp-plumber": "^1.2.0",
     "gulp-postcss": "^7.0.1",
     "gulp-rename": "^1.4.0",
-    "gulp-replace": "^1.0.0",
     "gulp-sass": "^4.0.1",
     "npm": "6.4.1",
     "postcss-calc": "^7.0.1",
