--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
   },
   "homepage": "https://github.com/fourjuaneight/fourjuaneight#readme",
   "engines": {
-    "node": "8.14.0"
+    "node": "10.15.1"
+  },
+  "resolutions": {
+    "natives": "1.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^9.1.5",
