--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,7 @@
 {
   "arrowParens": "avoid",
   "bracketSpacing": false,
+  "endOfLine": "auto",
   "jsxBracketSameLine": false,
   "printWidth": 80,
   "proseWrap": "preserve",
