--- a/package.json
+++ b/package.json
@@ -44,12 +44,12 @@
     "cssnano": "^4.1.4",
     "eslint": "^5.14.1",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^4.0.0",
-    "eslint-import-resolver-webpack": "^0.11.0",
-    "eslint-loader": "^2.1.2",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-html": "^5.0.3",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react-hooks": "^1.3.0",
     "eslint-plugin-react": "^7.12.4",
     "gulp": "^4.0.0",
     "gulp-concat-util": "^0.5.5",
