--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "fourjuaneight",
   "version": "1.0.0",
-  "description": "A blog about coding and productivity",
-  "main": "gulpfile.js",
+  "description": "A site about fourjuaneight",
   "scripts": {
-    "build": "gulp build; webpack; hugo",
+    "build": "gulp build --max_old_space_size=8000; hugo --environment=production; gulp cleanup",
+    "build-dev": "gulp build --max_old_space_size=8000; hugo --environment=development; gulp cleanup",
     "clean": "rm -rf public resources",
-    "concurrent": "concurrently \"gulp\" \"hugo server --disableFastRender\"",
-    "format": "prettier --write assets/js/*.js",
-    "lint": "eslint --fix assets/js/*.js",
-    "start-gulp": "nvm install;nvm use --delete-prefix;gulp critical;gulp watch",
-    "start-hugo": "hugo; hugo server --disableFastRender"
+    "clean-node": "rm -rf node_modules",
+    "develop-gulp": "gulp build; gulp watch",
+    "develop-hugo": "hugo; hugo serve",
+    "fix": "eslint --fix assets/**/*.js",
+    "format": "prettier --write assets/**/*.js",
+    "gulp-clean-test": "npm run clean; hugo; gulp cleanup"
   },
   "repository": {
     "type": "git",
@@ -18,11 +19,10 @@
   },
   "keywords": [
     "coding",
-    "productivity",
     "development",
     "front-end"
   ],
-  "author": "Juan",
+  "author": "Juan C Villela",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/fourjuaneight/fourjuaneight/issues"
@@ -46,25 +46,29 @@
     "cssnano": "^4.1.4",
     "eslint": "^5.14.1",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^4.1.0",
+    "eslint-config-prettier": "^4.0.0",
+    "eslint-import-resolver-webpack": "^0.11.0",
     "eslint-loader": "^2.1.2",
     "eslint-plugin-html": "^5.0.3",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react-hooks": "^1.3.0",
     "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-react-hooks": "^1.5.0",
     "gulp": "^4.0.0",
+    "gulp-cache": "^1.1.1",
     "gulp-concat-util": "^0.5.5",
     "gulp-gm": "0.0.9",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-jsbeautifier": "^3.0.0",
     "gulp-plumber": "^1.2.0",
     "gulp-postcss": "^7.0.1",
     "gulp-rename": "^1.4.0",
+    "gulp-replace": "^1.0.0",
     "gulp-sass": "^4.0.1",
-    "imagemin-mozjpeg": "^8.0.0",
-    "imagemin-pngquant": "^7.0.0",
-    "imagemin-svgo": "^7.0.0",
-    "imagemin-webpack-plugin": "^2.4.2",
+    "gulp-strip-comments": "^2.5.2",
+    "html-minifier": "^3.5.21",
+    "html-webpack-plugin": "^3.2.0",
     "npm": "6.7.0",
     "postcss-calc": "^7.0.1",
     "postcss-cli": "^6.0.0",
@@ -79,8 +83,5 @@
     "webpack": "^4.29.5",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.0"
-  },
-  "dependencies": {
-    "vanilla-lazyload": "^10.20.1"
   }
 }
